--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cgodin.qc.ca.androidrestaurant.fragments.MapFragment">
+    tools:context="cgodin.qc.ca.androidrestaurant.fragments.MapFragment"
+    android:background="#4fd">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
