--- a/app/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_restaurant_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cgodin.qc.ca.androidrestaurant.fragments.RestaurantDetailFragment"
-    android:background="#4f4f">
+    android:background="#FFFFFF">
 
     <RelativeLayout
         android:layout_width="wrap_content"
